Fix alignment on friend request sent notification

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -109,10 +109,10 @@ img {
 }
 
 .friendReqSent {
-  display: inline;
+  display: inline-block;
   float: right;
   font-size: 16px;
-  padding-right: 5px;
+  padding: 10px;
 }
 
 .friendButton {
